--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@ layout: default
 </style>
 
 <center>
-	<p class="index-content">HELLO THIS IS TOMS SITE NOW</p>
+	<p class="index-content">HELLO THIS IS TOMS SITE NOW
+	ONE TWO THREE FOUR
+	</p>
 </center>
